--- a/bootload/Makefile
+++ b/bootload/Makefile
@@ -13,7 +13,7 @@ OBJDUMP	= $(BINDIR)/$(ADDNAME)objdump
 RANLIB	= $(BINDIR)/$(ADDNAME)ranlib
 STRIP	= $(BINDIR)/$(ADDNAME)strip
 
-H8WRITE	= ../../../h8write
+H8WRITE	= ../../h8write
 H8WRITE2= ../../../kz_h8write
 H8WRITE_SERDEV = /dev/ttyUSB0
 
